[package]
name = "qoaudio"
authors = ["Rafael Caricio <rafael@caricio.com>"]
description = "QOA audio format decoder in Rust"
license = "MIT OR Apache-2.0"
version = "0.5.0"
edition = "2021"
publish = ["crates-io"]
repository = "https://github.com/rafaelcaricio/qoaudio"

[dependencies]
rodio = { version = "0.17.1", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.3"

[features]
default = []

[[example]]
name = "play"
path = "examples/play.rs"
required-features = ["rodio"]

[[bench]]
name = "qoa_benchmarks"
harness = false
